# editable-gaussian-reflections

./: .clang-format  .cmdrc  .envrc  .envrc_colmap  .gitignore  .gitmodules  2.sh  4.sh  CURRENT_BEST_STATE_REAL_SCENES.sh  DIFFUSE_LOSS_WEIGHT=0.0-13938764.std  DIFFUSE_LOSS_WEIGHT=0.0-13938772.std  DIFFUSE_LOSS_WEIGHT=1.0-13938765.std  DIFFUSE_LOSS_WEIGHT=1.0-13938773.std  Gaussian_Viewer.ini  LICENSE.md  LICENSE.txt  LICENSE_3DGS.txt  LICENSE_NVIDIA.txt  LICENSE_VIEWER.md  NOTES.md  PROTOCOL.md  README.md  REFLECTION_LOSS_WEIGHT=0.0-13938759.std  REFLECTION_LOSS_WEIGHT=0.1-13938744.std  REFLECTION_LOSS_WEIGHT=0.1-13938753.std  REFLECTION_LOSS_WEIGHT=1.0-13932247.std  REFLECTION_LOSS_WEIGHT=1.0-13938743.std  REFLECTION_LOSS_WEIGHT=1.0-13938752.std  REFLECTION_LOSS_WEIGHT=1.0-13938760.std  REFLECTION_LOSS_WEIGHT=1.0-13938767.std  TODO.md  TODO_multipass.md  arguments.py  blender_cameras_to_colmap_cameras.py  blender_objects  brdf.py  cache  cameras.json  chromeball_reflections  colmap  (+132 more)
bvh/: __init__.py
bvh/bvh_tracing.egg-info/: PKG-INFO  SOURCES.txt
bvh/src/: trace.cu
datasets/: debug_scenes
editable_gauss_refl/: __init__.py  cfg.py  config.py
editable_gauss_refl/cuda/: CMakeLists.txt  ext.cpp
editable_gauss_refl/cuda/cmake/: FindTorch.cmake
editable_gauss_refl/cuda/csrc/: backward_pass.cu  forward_pass.cu  shaders.cu
editable_gauss_refl/cuda/csrc/core/: config.h  framebuffer.h  per_pixel_linked_list.h  stats.h
editable_gauss_refl/cuda/csrc/headers/: torch.h
editable_gauss_refl/cuda/csrc/optix/: bvh_wrapper.cu  bvh_wrapper.h  denoiser_wrapper.h  pipeline_wrapper.h
editable_gauss_refl/cuda/csrc/utils/: exception.h  ggx_brdf.h  kernel.cu  misc.cu
editable_gauss_refl/dataset/: blender_dataset.py  blender_prior_dataset.py  camera_info.py  colmap_loader.py  colmap_prior_dataset.py  points_utils.py
editable_gauss_refl/renderer/: __init__.py  gaussian_raytracer.py  gaussian_renderer.py
editable_gauss_refl/scene/: __init__.py  cameras.py  dataset_readers.py  editable_gaussian_model.py  gaussian_model.py  scene.py
editable_gauss_refl/utils/: cam_utils.py  depth_utils.py  general_utils.py  image_utils.py  ply_utils.py  point_utils.py
examples/: render.py  render_novel_views.py  train.py
examples/prepare/: prepare_initial_ply.py
experiments/: combine_video.sh  compare_videos.sh  dlscript.sh  exp100.sh  exp101.sh  exp107.sh  exp108.sh  exp109.sh  exp110.sh  exp111.sh  exp91.sh  exp92.sh  exp94.sh  exp96.sh  exp97.sh  exp98.sh  exp_fix_dens.sh  exp_fix_lut.sh  exp_fix_too_dark.sh  experiment53.sh  experiment55.sh  experiments11.sh  experiments16.sh  experiments17.sh  experiments2.sh  experiments21.sh  experiments23.sh  experiments24.sh  experiments26.sh  experiments27.sh  experiments34.sh  experiments4.sh  experiments43.sh  experiments45.sh  experiments46.sh  experiments47.sh  experiments5.sh  experiments51.sh  experiments58.sh  experiments60.sh  (+19 more)
gaussian_renderer/: __init__.py  gaussian_raytracer.py  gaussian_raytracing_renderer.py  gaussian_renderer.py  network_gui.py
gaussian_tracing/: __init__.py  arguments.py  cfg.py  raytracer_config.py
gaussian_tracing/cuda/: CMakeLists.txt  ext.cpp  load_camera_poses.py  optimize.py
gaussian_tracing/cuda/cmake/: FindOptiX8.cmake
gaussian_tracing/cuda/csrc/: Exception.h  activations.cu  backward_pass.cu  buffer_definition.h  diffuse.cu  dump.h  extra.h  flags.h  format_config_to_python.cpp  forward_pass.cu  gaussian.cu  gausstracer.cpp  ggx_brdf.h  params.h  populate_bvh.cu  populate_bvh.h  random.h  raytracer.cpp  shaders.cu  stochastic.cu  tonemapping.h  utils.cu  vec_math.h
gaussian_tracing/cuda/csrc/core/: all.h  camera.h  config.h  framebuffer.h  gaussians.h  metadata.h  per_pixel_linked_list.h  stats.h
gaussian_tracing/cuda/csrc/optix/: bvh_wrapper.cu  bvh_wrapper.h  denoiser_wrapper.h  pipeline_wrapper.h
gaussian_tracing/cuda/csrc/utils/: activations.cu  common.h  exception.h  ggx_brdf.h  helpers.cu  kernel.cu  misc.cu  principled_brdf.h  random.h  vec_math.h
gaussian_tracing/dataset/: __init__.py  blender_dataset.py  blender_prior_dataset.py  camera_info.py  colmap_dataset.py  colmap_loader.py  colmap_parser.py  colmap_prior_dataset.py  image_utils.py  points_utils.py
gaussian_tracing/renderer/: gaussian_raytracer.py  gaussian_renderer.py  network_gui.py
gaussian_tracing/scene/: __init__.py  cameras.py  dataset_readers.py  editable_gaussian_model.py  gaussian_model.py  scene.py
gaussian_tracing/utils/: cam_utils.py  depth_utils.py  general_utils.py  graphics_utils.py  loss_utils.py  ply_utils.py  point_utils.py  sh_utils.py  tonemapping.py
point_cloud/iteration_1/: dual_mlp.pt  dual_point_cloud.ply
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  editable_gaussian_model.py  gaussian_model.py  scene.py  surfel_model.py  tonemapping.py
scene/dataset/: __init__.py  (+7 more)
scripts/: benchmark.sh  benchmark_priors.sh  benchmark_real.sh  build.sh  compare_with_envgs.sh  compress_renders.sh  create_video_ablations.sh  dryrun.sh  format.sh  measure_all_fps.sh  prepare_initial_ply.sh  prepare_initial_plys.sh  queue_all_network_ablations.sh  queue_all_other_ablations.sh  queue_all_priors.sh  queue_all_scenes.sh  queue_all_sparse_scenes.sh  queue_comparisons.sh  queue_hard_sparse.sh  reinstall.sh  resize_priors.py  run_bear_scene_legacy_sfm.sh  run_teaser_scene.sh  test.sh  transforms_from_colmap.sh
tests/: test_datasets.py  test_gaussian_tracing.py  test_tonemapping.py
tools/: blender_renders_to_dataset.py  brdf.py  compress_dataset.py  convert_blender_renders_to_dataset.py  convert_dataset.py  convert_scores_to_latex.py  download_dataset.py  edit_selection.py  eval_comparison.py  eval_metrics.py  format_scores_to_latex.py  gaussianviewer.py  measure_fps.py  prep_dataset_cache_priors.py  primary_rays.py  raycasting.py  render_novel_views.py  resize_priors.py  run_comparison.py  select_gaussians_from_masks.py
utils/: cam_utils.py  camera_utils.py  depth_utils.py  general_utils.py  graphics_utils.py  image_utils.py  ply_utils.py  point_utils.py
viewer/: __init__.py
(+30 files in other folders)
